# bns-mcu-porting-key

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  README_ZH.md
doc/: callback_en.md  callback_zh.md  cmd_en.md  cmd_zh.md  httpClient.md  infura_en.md  infura_zh.md  other_setting_en.md  other_setting_zh.md  quick_start_en.md  quick_start_zh.md  receiptDao_en.md  receiptDao_zh.md  summary_en.md  summary_zh.md
example/: CMakeLists.txt
example/bns-client-example/: CMakeLists.txt  bns_client_example.c  callback.c  callback.h  config.h  receipt_dao.c  receipt_dao.h  ssl_get.c  ssl_get.h
src/: CMakeLists.txt
src/bns-client/: bns_client.c  bns_client.h
src/bns-client/contract/: clearance_record_cache.c  clearance_record_cache.h  contract.c  contract.h
src/bns-client/core/: bns_definitions.h  bns_exit_code.c  bns_exit_code.h  bns_types.h  core.h
src/bns-client/input/: binary_ledger_input.c  binary_ledger_input.h  ledger_input.c  ledger_input.h  ledger_input_request.c  ledger_input_request.h  receipt.c  receipt.h  receipt_locator.c  receipt_locator.h
src/bns-client/login/: login.c  login.h
src/bns-client/register/: bns_server_info.c  bns_server_info.h  register.c  register.h
src/bns-client/sha256/: sha256.c  sha256.h
src/bns-client/util/: byte_util.c  byte_util.h  log.c  log.h  numeric_util.c  numeric_util.h  signature_util.c  signature_util.h  slice_validation_util.c  slice_validation_util.h  string_util.c  string_util.h  time_util.c  time_util.h
src/bns-client/util/crypto/: keccak256.c  keccak256.h
src/bns-client/verify/: merkle_proof.c  merkle_proof.h  slice.c  slice.h  verify.c  verify.h  verify_receipt_result.c  verify_receipt_result.h
test/: CMakeLists.txt
test/src/: test_bns_server_info.c  test_cjson.c  test_contract.c  test_merkle_proof.c  test_receipt.c  test_signature_util.c  test_util.c  test_verify.c
test/src/mock_data/: mock_binary_ledger_input_response.h  mock_bns_client.h  mock_bns_client_util.h  mock_bns_server_info_response.h  mock_clearance_record_response.h  mock_ledger_input_request.h  mock_ledger_input_response.h  mock_login_response.h  mock_merkle_proof_response.h  mock_ok_data.h  mock_receipt.h  mock_receipt_locator.h  mock_receipt_locator_response.h  mock_receipt_response.h  mock_receipt_util.h  mock_register_response.h
test/src/test_binary_ledger_input/: CMakeLists.txt  test_binary_ledger_input_build_post_ledger_input_url.c  test_binary_ledger_input_check_and_parse_ledger_input_response.c
test/src/test_bns_client/: test_bns_client_init.c
test/src/test_byte_util/: test_byte_util_bns_byte_to_hex.c  test_byte_util_bns_hex_to_byte.c
test/src/test_ledger_input/: test_ledger_input_bns_post_ledger_input.c  test_ledger_input_build_post_ledger_input_url.c  test_ledger_input_check_and_parse_ledger_input_response.c  test_ledger_input_parse_done_clearance_order_list_from_cjson.c
test/src/test_ledger_input_request/: test_ledger_input_request_build_ledger_input_request.c  test_ledger_input_request_build_ledger_input_request_json.c  test_ledger_input_request_ledger_input_request_sign.c  test_ledger_input_request_ledger_input_request_to_json.c
test/src/test_merkle_proof/: test_merkle_proof_build_merkle_proof_request.c
test/src/test_numeric_util/: test_numeric_util_bns_digits.c  test_numeric_util_bns_lltos.c
test/src/test_receipt/: test_receipt_parse_receipt_from_cjson.c  test_receipt_receipt_check_sig.c  test_receipt_receipt_first_part_to_sign_data.c  test_receipt_receipt_second_part_hash_to_sign_data.c  test_receipt_receipt_to_digest_value.c  test_receipt_receipt_to_sign_data.c
test/src/test_receipt_locator/: CMakeLists.txt  test_receipt_locator_bns_get_receipt_locator.c  test_receipt_locator_bns_post_receipt_locator.c  test_receipt_locator_build_get_receipt_locator_url.c  test_receipt_locator_build_post_receipt_locator_url.c  test_receipt_locator_build_receipt_locator.c  test_receipt_locator_build_receipt_locator_request.c  test_receipt_locator_check_and_parse_receipt_locator_response.c
test/src/test_register/: test_register_bns_check_register.c  test_register_bns_post_register.c  test_register_build_register_request.c  test_register_build_register_url.c  test_register_check_and_parse_register_response.c  test_register_register_request_sign.c  test_register_register_request_to_json.c
test/src/test_slice_validation_util/: test_slice_validation_util_eval_root_hash_from_slice.c  test_slice_validation_util_get_leaf_node_hash.c  test_slice_validation_util_is_leaf_node.c  test_slice_validation_util_slice_get_root_hash.c
test/src/test_spo_server_info/: test_bns_server_info_bns_get_server_info.c  test_bns_server_info_bns_post_server_info.c  test_bns_server_info_build_get_spo_server_info_url.c  test_bns_server_info_build_server_info_request.c  test_bns_server_info_check_and_parse_spo_server_info_response.c
test/src/test_ssl/: CMakeLists.txt  ssl_get.c  ssl_get.h  test_ssl_get.c
test/src/test_string_util/: test_string_util_bns_equals_ignore_case.c  test_string_util_bns_equals_n_ignore_case.c  test_string_util_bns_strdup.c  test_string_util_remove_end_slash.c
test/src/test_verify/: test_verify_receipt.c
